welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:6: error: value n is not a member of Array[Int]
	for (i <- 0 to tab.n-1) {
                           ^