welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var tab:Array[Int]=nums
	var lookingFor:Int =value
     var n:Int =tab.length
	
	for (i <- 0 to tab.n-1) {


		if (nums(i)== lookingFor){return i}
		else{return -1}
	}
}
